--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                             <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Tap Shark" class="shark-image" id="tapImage" />
                         </div>
                         <div class="shark-gallery">
-                            <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Shark 1" data-skin="default" />
+                            <img src="ww.png" alt="Shark 1" data-skin="default" />
                             <img src="https://sinobu1.github.io/shark-tapper/shark_skin1.png" alt="Gold Shark" data-skin="skin3" />
                             <img src="https://sinobu1.github.io/shark-tapper/shark_skin2.png" alt="Leopard Shark" data-skin="skin2" />
                         </div>
@@ -706,7 +706,7 @@
             const DB_URL = "https://tralalero-fec07-default-rtdb.firebaseio.com";
             const DEFAULT_AVATAR_URL = "https://placehold.co/64x64";
             const COIN_ICON_URL = "https://sinobu1.github.io/shark-tapper/coin_icon_small.png";
-            const SHARK_DEFAULT_SKIN_URL = "https://sinobu1.github.io/shark-tapper/shark.png";
+            const SHARK_DEFAULT_SKIN_URL = "ww.png";
             const SHARK_SKIN2_URL = "https://sinobu1.github.io/shark-tapper/shark_skin2.png";
             const SHARK_SKIN3_URL = "https://sinobu1.github.io/shark-tapper/shark_skin1.png";
             const LOCAL_STORAGE_KEY = 'sharkTapperData';
