--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <!-- Telegram Web App SDK -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
      <script src="main/sharktapper/config.js" defer></script>
-     <script src="main/sharktapper/eventBus.js" defer></script>
-     <script src="main/sharktapper/EventBusShop.js" defer></script> 
-     <script src="main/sharktapper/GameStateShop.js" defer></script>
-     <script src="main/sharktapper/ShopModule.js" defer></script>
-     <script src="main/sharktapper/UIControllerShop.js" defer></script>
-     <script src="main/sharktapper/AppShop.js" defer></script>
-     <script src="main/sharktapper/stateManager.js" defer></script>
-     <script src="main/sharktapper/uiManager.js" defer></script> 
-     <script src="main/sharktapper/saveManager.js" defer></script> 
-     <script src="main/sharktapper/EffectManager.js" defer></script> 
-     <script src="main/sharktapper/AchievementManager.js" defer></script> 
-     <script src="main/sharktapper/GameCore.js" defer></script>
-     <script src="main/sharktapper/main.js" defer></script>
+     <script src="sharktapper/eventBus.js" defer></script>
+     <script src="sharktapper/EventBusShop.js" defer></script> 
+     <script src="sharktapper/GameStateShop.js" defer></script>
+     <script src="sharktapper/ShopModule.js" defer></script>
+     <script src="sharktapper/UIControllerShop.js" defer></script>
+     <script src="sharktapper/AppShop.js" defer></script>
+     <script src="sharktapper/stateManager.js" defer></script>
+     <script src="sharktapper/uiManager.js" defer></script> 
+     <script src="sharktapper/saveManager.js" defer></script> 
+     <script src="sharktapper/EffectManager.js" defer></script> 
+     <script src="sharktapper/AchievementManager.js" defer></script> 
+     <script src="sharktapper/GameCore.js" defer></script>
+     <script src="sharktapper/main.js" defer></script>
     
 </head>
 <body>
