--- a/shop1.html
+++ b/shop1.html
@@ -18,20 +18,20 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-   <script src="/sharktapper/config.js" defer></script>
-   <script src="/sharktapper/eventBus.js" defer></script>
-   <script src="/sharktapper/EventBusShop.js" defer></script> 
-   <script src="/sharktapper/GameStateShop.js" defer></script>
-   <script src="/sharktapper/ShopModule.js" defer></script>
-   <script src="/sharktapper/UIControllerShop.js" defer></script>
-   <script src="/sharktapper/AppShop.js" defer></script>
-   <script src="/sharktapper/stateManager.js" defer></script>
-   <script src="/sharktapper/uiManager.js" defer></script> 
-   <script src="/sharktapper/saveManager.js" defer></script> 
-   <script src="/sharktapper/EffectManager.js" defer></script> 
-   <script src="/sharktapper/AchievementManager.js" defer></script> 
-   <script src="/sharktapper/GameCore.js" defer></script>
-   <script src="/sharktapper/main.js" defer></script>
+   <script src="main/sharktapper/config.js" defer></script>
+     <script src="sharktapper/eventBus.js" defer></script>
+     <script src="sharktapper/EventBusShop.js" defer></script> 
+     <script src="sharktapper/GameStateShop.js" defer></script>
+     <script src="sharktapper/ShopModule.js" defer></script>
+     <script src="sharktapper/UIControllerShop.js" defer></script>
+     <script src="sharktapper/AppShop.js" defer></script>
+     <script src="sharktapper/stateManager.js" defer></script>
+     <script src="sharktapper/uiManager.js" defer></script> 
+     <script src="sharktapper/saveManager.js" defer></script> 
+     <script src="sharktapper/EffectManager.js" defer></script> 
+     <script src="sharktapper/AchievementManager.js" defer></script> 
+     <script src="sharktapper/GameCore.js" defer></script>
+     <script src="sharktapper/main.js" defer></script>
 </head>
 
 <body>
