--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
     <!-- Telegram Web App SDK -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-     <script src="main/sharktapper/config.js" defer></script>
+     <script src="sharktapper/config.js" defer></script>
      <script src="sharktapper/eventBus.js" defer></script>
      <script src="sharktapper/EventBusShop.js" defer></script> 
      <script src="sharktapper/GameStateShop.js" defer></script>
