--- a/shop1.html
+++ b/shop1.html
@@ -18,7 +18,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-   <script src="main/sharktapper/config.js" defer></script>
+   <script src="sharktapper/config.js" defer></script>
      <script src="sharktapper/eventBus.js" defer></script>
      <script src="sharktapper/EventBusShop.js" defer></script> 
      <script src="sharktapper/GameStateShop.js" defer></script>
