--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <!-- Нижняя навигация -->
     <nav class="bottom-nav" aria-label="Навигация по игре">
-        <a href="indexcopy.html" class="nav-button active" aria-label="Главная">
+        <a href="index.html" class="nav-button active" aria-label="Главная">
           <i class="fas fa-fish"></i>
         </a>
         <a href="shop1copy.html" class="nav-button" aria-label="Магазин">
