--- a/shop1copy.html
+++ b/shop1copy.html
@@ -92,7 +92,7 @@
     </div>
     <!-- Нижняя навигация -->
 <nav class="bottom-nav" aria-label="Навигация по игре">
-  <a href="indexcopy.html" class="nav-button" aria-label="Главная">
+  <a href="index.html" class="nav-button" aria-label="Главная">
     <i class="fas fa-fish"></i>
   </a>
   <a href="shop1copy.html" class="nav-button active" aria-label="Магазин">
